--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,11 @@
     "lib": ["ES2020"],
     "declaration": true,
     "outDir": "./dist",
-    "strict": true,
+    "strict": false,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": false,
     "moduleResolution": "node",
     "resolveJsonModule": true
   },
